--- a/src/styles/helpers/_media.scss
+++ b/src/styles/helpers/_media.scss
@@ -1,4 +1,4 @@
-@use 'functions' as *;
+@use './functions' as *;
 
 $laptop: 1440.98;
 $tablet: 1023.98;
@@ -59,12 +59,13 @@ $mobile-s: 480.98;
             @content;
         }
     }
-}
 
-@if ($hasActionEffectOnMobile) {
-    @media (any-hover: none) {
-        &:active {
-            @content;
+
+    @if ($hasActionEffectOnMobile) {
+        @media (any-hover: none) {
+            &:active {
+                @content;
+            }
         }
     }
 }
