--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -272,10 +272,9 @@ svg * {
 
 body {
   font-family: var(--font-family-base);
-  font-size: clamp(1.5rem, 1.3725490196rem + 0.522875817vw, 2rem);
+  font-size: clamp(1.1625rem, 0.9490196078rem + 0.8758169935vw, 2rem);
   letter-spacing: 0.03em;
   font-weight: 100;
-  overflow: hidden;
   color: var(--color-light);
 }
 body #root div .background {
@@ -331,10 +330,6 @@ body #root div .grid-container header {
   justify-content: center;
   align-items: center;
 }
-body #root div .grid-container header h1 {
-  font-size: clamp(1.7125rem, 1.1294117647rem + 2.3921568627vw, 4rem);
-  font-weight: 100;
-}
 body #root div .grid-container header ul li {
   position: relative;
   letter-spacing: 0.1875rem;
@@ -348,20 +343,16 @@ body #root div .grid-container header ul li::marker {
   font-size: 0.5em;
 }
 
-.input, .btn {
-  width: 32rem;
-  height: 4rem;
-  margin: 0.625rem;
+h1 {
+  font-size: clamp(2.33125rem, 1.9058823529rem + 1.7450980392vw, 4rem);
 }
 
-.btn {
-  border-radius: 40px;
+h2 {
+  font-size: clamp(1.75rem, 1.431372549rem + 1.3071895425vw, 3rem);
 }
 
-.input {
-  text-indent: 1.25rem;
-  border-radius: 20px;
-  background-color: var(--color-light-grey);
+h3 {
+  font-size: clamp(1.1625rem, 0.9490196078rem + 0.8758169935vw, 2rem);
 }
 
 .login-container {
@@ -375,8 +366,8 @@ body #root div .grid-container header ul li::marker {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 37.5rem;
-  height: 46.875rem;
+  width: clamp(21.875rem, 17.8921568627rem + 16.339869281vw, 37.5rem);
+  height: clamp(26.0625rem, 20.3590686275rem + 23.3986928105vw, 48.4375rem);
   background-color: var(--color-dark-blue);
   opacity: 0.8;
   border-radius: 6.25rem 1.5625rem;
@@ -406,11 +397,6 @@ body #root div .grid-container header ul li::marker {
   flex-direction: column;
   margin-bottom: 70px;
 }
-.login-container .form__main button {
-  border-radius: 40px;
-  background-color: var(--color-orange);
-  color: var(--color-light);
-}
 .login-container .form__down {
   display: flex;
   justify-content: space-between;
@@ -419,16 +405,16 @@ body #root div .grid-container header ul li::marker {
 
 .form__img-line {
   position: relative;
-  width: 26.9375rem;
-  height: 4.6rem;
+  width: clamp(15.7125rem, 12.8512254902rem + 11.7385620915vw, 26.9375rem);
+  height: clamp(2.68125rem, 2.1921568627rem + 2.0065359477vw, 4.6rem);
   background-image: url("../assets/orange-line.png");
   transform: rotate(162deg) translate(7.8125rem, 2.1875rem);
 }
 
 .form__img-notebook {
   position: absolute;
-  width: 12.6875rem;
-  height: 9.1875rem;
+  width: clamp(7.4rem, 6.0522058824rem + 5.5294117647vw, 12.6875rem);
+  height: clamp(5.35625rem, 4.3796568627rem + 4.0065359477vw, 9.1875rem);
   background-image: url("../assets/doc.png");
   transform: rotate(5deg) translate(12.4375rem, -2.0625rem);
 }
@@ -437,6 +423,26 @@ body #root div .grid-container header ul li::marker {
   background-color: var(--color-dark-blue);
   color: var(--color-light);
   font-size: clamp(0.5875rem, 0.3867647059rem + 0.8235294118vw, 1.375rem);
+}
+
+.input, .btn {
+  width: clamp(18.625rem, 15.2156862745rem + 13.9869281046vw, 32rem);
+  height: clamp(2.3125rem, 1.8823529412rem + 1.7647058824vw, 4rem);
+  margin: 0.625rem;
+}
+
+.btn {
+  border-radius: 40px;
+  background-color: var(--color-orange);
+  color: var(--color-light);
+  font-size: clamp(1.5rem, 1.3725490196rem + 0.522875817vw, 2rem);
+}
+
+.input {
+  border: none;
+  text-indent: 1.25rem;
+  border-radius: 20px;
+  background-color: var(--color-light-grey);
 }
 
 /*# sourceMappingURL=main.css.map */
