--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -1,10 +1,13 @@
 @use 'helpers' as *;
 body {
+    height: 100%;
+    width: 100vw;
     font-family: var(--font-family-base);
-    @include fluid-text(32, 18.6);
+    @include fluid-text(32, 16);
     letter-spacing: 0.03em;
     font-weight: 100;
     color: var(--color-light);
+    overflow: hidden;
     #root {
         div {
             .background {
@@ -38,47 +41,141 @@ body {
                 }
             }
             .grid-container {
-
-                display: grid;
-                grid-template-rows: auto 1fr; // Первая строка занимает свою высоту, вторая — оставшееся пространство
-                grid-template-columns: 1fr 1fr; // Два столбца равной ширины
-                height: 100vh; // Высота контейнера на весь экран (по желанию)
-
-                &__item {
-                    padding: 16px;
-                }      
-
+                @include flex-center(false, false);
+                height: 100vh;
                 .navbar {
-                    grid-column: 1 / -1; // Занимает всю ширину (все столбцы)
-                    position: relative;
+                    position: fixed;
+                    z-index: 3;
                     top: 0;
                     left: 0;
                     opacity: 0.8;
                     background-color: var(--color-dark-blue);
-                    width: rem(1920);
-                    height: rem(65);
+                    width: 100%;
+                    height: rem(64);
+
                 }
-                header {
-                    @include flex-center(false, true);
-                    ul {
-                        li {
-                            position: relative;
-                            letter-spacing: rem(3);
-                            font-family: var(--font-family-accent);
-                            font-weight: 100;
-                            line-height: 2;
-                            left: rem(-125);
-                            &::marker {
-                                font-size: 0.5em;
+                &__content {
+                    @include flex-center(false, false);
+                    @include mobile {
+                        @include flex-center(false, true);
+                        gap: 0;
+                        header {
+                            h1, ul {
+                                margin: 0;
+                                padding: 0;
+                                br {
+                                    display: none;
+                                  }
                             }
-                            @include fluid-text(28, 12);
+                           
+                            display: inline-flex;
+                            * {text-align: center;}
+                            ul li::marker {
+
+                                content: none;
+                            }
                         }
-
+                        .form {
+                            margin-top: 0;
+                        }
                     }
+                    
+                    gap: fluid(250, -78);
+                    max-width: rem(1920);
+                    max-height: rem(1080);
+                    header, .form {
+                        z-index: 4;
+                        margin-top: rem(64);
+                    }
+                    header {
+                        @include flex-center(true, true);
+                        h1 {
+                            // Эффект при наведении
+                            &:hover {
+                                transform: scale(1.1); // Увеличение размера текста
+                                text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); // Тень для текста
 
-    
-                }
-                
+                                // Анимация для каждой строки
+                                &::before,
+                                &::after {
+                                width: 100%; // Подчеркивание на всю ширину
+                                opacity: 1; // Появление подчеркивания
+                                }
+                            }
+
+                            // Подчеркивание сверху
+                            &::before {
+                                content: '';
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                width: 0;
+                                height: 3px;
+                                background-color: var(--color-orange); // Цвет подчеркивания
+                                transition: width 0.5s ease, opacity 0.5s ease;
+                                opacity: 0;
+                            }
+
+                            // Подчеркивание снизу
+                            &::after {
+                                content: '';
+                                position: absolute;
+                                bottom: 0;
+                                left: 0;
+                                width: 0;
+                                height: 3px;
+                                background-color: var(--color-orange); // Цвет подчеркивания
+                                transition: width 0.5s ease, opacity 0.5s ease;
+                                opacity: 0;
+                            }
+                        }
+                        div {
+                            width: 100%;
+                            ul {
+                                li {
+                                    position: relative;
+                                    letter-spacing: rem(3);
+                                    font-family: var(--font-family-accent);
+                                    font-weight: 100;
+                                    line-height: 2;
+                                    &::marker {
+                                        font-size: 0.5em;
+                                    }
+                                    @include fluid-text(28,14);
+
+                                    &:hover {
+                                        color: #fff; // Изменение цвета текста
+                                        background-color: rgba(223, 134, 39, 0.5);
+                                        transform: scale(1.1); // Увеличение размера
+                                        box-shadow: 0 4px 15px var(--color-orange); // Тень
+                                  
+                                        // Подчеркивание
+                                        &::after {
+                                          width: 100%; // Подчеркивание на всю ширину
+                                          opacity: 1; // Появление подчеркивания
+                                        }
+                                      }
+                                  
+                                      // Подчеркивание
+                                      &::after {
+                                        content: '';
+                                        position: absolute;
+                                        bottom: 0;
+                                        left: 0;
+                                        width: 0;
+                                        height: 3px;
+                                        background-color: #fff; // Цвет подчеркивания
+                                        transition: width 0.3s ease, opacity 0.3s ease;
+                                        opacity: 0;
+                                      }
+
+                                }
+
+                            }  
+                        }
+                       
+                    }
+                }                
             }
             
         }
@@ -87,14 +184,14 @@ body {
 
 
 h1 {
-    @include fluid-text(64, 37.3);
+    @include fluid-text(64, 32);
 }
 
 h2 {
-    @include fluid-text(48, 28);
+    @include fluid-text(48, 24);
 }
 
 h3 {
-    @include fluid-text(32, 18.6);
+    @include fluid-text(32, 16);
 }
 
