--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -19,7 +19,7 @@
             width: 100%;
         }
 
-        &__welcome {
+        &__text {
             margin-bottom: fluid(30,15);
             h2 {
                 font-weight: 100;
@@ -62,9 +62,20 @@
  
 }
 
-#forget_password, #registration {
+.forget_password, #registration {
     background-color: var(--color-dark-blue);
     color: var(--color-light);
-    @include fluid-text(22, 11);
+    @include fluid-text(24, 12);
 
+}
+
+.error {
+    font-weight: 666;
+    color:rgb(255, 0, 0);
+    font-size: fluid(20,10);
+    text-indent: rem(20);
+}
+
+#backBtn {
+    @include fluid-text(30, 15);
 }
