authorization changed and add document creation from

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,5 +4,6 @@
 @use 'utils';
 @use 'globals'; 
 @use 'login';
+@use 'documentCreation';
 @use '../components/Button/Button.scss';
 @use '../components/Input/Input.scss';
