--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -44,6 +44,9 @@ body {
                 @include flex-center(false, false);
                 height: 100vh;
                 .navbar {
+
+                    display: flex;
+                    justify-content: end;
                     position: fixed;
                     z-index: 3;
                     top: 0;
@@ -52,6 +55,22 @@ body {
                     background-color: var(--color-dark-blue);
                     width: 100%;
                     height: rem(64);
+
+                    &__login-button {
+                        background: none;
+                        border: none;
+                        color: var(--color-light); /* Цвет текста */
+                        @include fluid-text(24,12);
+                        cursor: pointer;
+                        margin: fluid(12, 6);
+                        margin-right: fluid(40, 20);
+                        border-radius: 5px;
+                        transition: background-color 0.3s;
+                    }
+
+                    &__login-button:hover {
+                        background-color: var(--color-purple); /* Цвет фона при наведении */
+                      }
 
                 }
                 &__content {
@@ -195,3 +214,12 @@ h3 {
     @include fluid-text(32, 16);
 }
 
+.error {
+    font-weight: 666;
+    color:rgb(255, 0, 0);
+    font-size: fluid(20,10);
+    text-indent: rem(20);
+}
+
+
+ 
