--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -316,6 +316,8 @@ body #root div .grid-container {
   height: 100vh;
 }
 body #root div .grid-container .navbar {
+  display: flex;
+  justify-content: end;
   position: fixed;
   z-index: 3;
   top: 0;
@@ -324,6 +326,20 @@ body #root div .grid-container .navbar {
   background-color: var(--color-dark-blue);
   width: 100%;
   height: 4rem;
+}
+body #root div .grid-container .navbar__login-button {
+  background: none;
+  border: none;
+  color: var(--color-light); /* Цвет текста */
+  font-size: clamp(0.75rem, 0.5588235294rem + 0.7843137255vw, 1.5rem);
+  cursor: pointer;
+  margin: clamp(0.375rem, 0.2794117647rem + 0.3921568627vw, 0.75rem);
+  margin-right: clamp(1.25rem, 0.931372549rem + 1.3071895425vw, 2.5rem);
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+body #root div .grid-container .navbar__login-button:hover {
+  background-color: var(--color-purple); /* Цвет фона при наведении */
 }
 body #root div .grid-container__content {
   display: flex;
@@ -450,6 +466,13 @@ h3 {
   font-size: clamp(1rem, 0.7450980392rem + 1.045751634vw, 2rem);
 }
 
+.error {
+  font-weight: 666;
+  color: rgb(255, 0, 0);
+  font-size: clamp(0.625rem, 0.4656862745rem + 0.6535947712vw, 1.25rem);
+  text-indent: 1.25rem;
+}
+
 .form {
   position: relative;
   display: flex;
@@ -518,15 +541,53 @@ h3 {
   font-size: clamp(0.75rem, 0.5588235294rem + 0.7843137255vw, 1.5rem);
 }
 
-.error {
-  font-weight: 666;
-  color: rgb(255, 0, 0);
-  font-size: clamp(0.625rem, 0.4656862745rem + 0.6535947712vw, 1.25rem);
-  text-indent: 1.25rem;
-}
-
 #backBtn {
   font-size: clamp(0.9375rem, 0.6985294118rem + 0.9803921569vw, 1.875rem);
+}
+
+.form {
+  justify-content: end;
+}
+.form #createDoc {
+  margin: 0;
+}
+.form__img-notebook {
+  top: 0;
+  left: clamp(6.1875rem, 4.5784313725rem + 6.6013071895vw, 12.5rem);
+}
+.form__buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: clamp(3.125rem, 2.3284313725rem + 3.2679738562vw, 6.25rem);
+}
+.form__buttons Button {
+  background-color: var(--color-light-grey);
+  color: black;
+  border-radius: clamp(0.75rem, 0.5588235294rem + 0.7843137255vw, 1.5rem);
+  font-size: clamp(1.125rem, 0.8382352941rem + 1.1764705882vw, 2.25rem);
+}
+.form__decorative-image {
+  transform: rotate(180deg);
+  border-radius: clamp(3.125rem, 2.3284313725rem + 3.2679738562vw, 6.25rem) clamp(0.78125rem, 0.5821078431rem + 0.8169934641vw, 1.5625rem);
+  position: relative;
+  opacity: 0.9;
+  overflow: hidden;
+  width: clamp(18.75rem, 13.9705882353rem + 19.6078431373vw, 37.5rem);
+  height: clamp(9.0625rem, 6.7508578431rem + 9.4836601307vw, 18.13125rem);
+  background-image: url("../assets/orange-tringle.png");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+#addDoc {
+  background-image: url("../assets/add-doc.png");
+}
+
+#selectDoc {
+  background-image: url("../assets/select-doc.png");
 }
 
 .input, .btn {
