--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,7 @@
 
     --color-dark: black;
     --color-orange: #DF8627;
+    --color-dark-orange: #ff7b00;
     --color-purple: #A998F4;
     --color-grey: #888888;
     --color-light-grey: #D9D9D9;
