--- a/src/styles/documentCreation.scss
+++ b/src/styles/documentCreation.scss
@@ -22,8 +22,13 @@
             border-radius: fluid(24,12);
             @include fluid-text(36,18)
         }
+        Button:hover {
+            color: var(--color-light);
+        }
 
-    }   
+    } 
+    
+   
 
     &__decorative-image {
         transform: rotate(180deg);
@@ -38,6 +43,66 @@
         background-position: center; // Центрируем изображение
         background-repeat: no-repeat; // Запрещаем повторение изображения
       }
+
+    &__createDoc {
+        width: fluid(600, 300);
+        height: fluid(775, 387.5);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    &__doc-data {
+        @include flex-center(false, true);
+        .select-wrapper {
+            position: relative;
+            width: fluid(512, 256);
+            margin: fluid(10, 5);
+
+          
+            &::after {
+              content: "▼";
+              position: absolute;
+              right: rem(12);
+              top: 50%;
+              transform: translateY(-50%);
+              pointer-events: none;
+              color: #555;
+              @include fluid-text(20, 10);
+            }
+          
+            select {
+              text-indent: rem(8);
+              width: 100%;
+              padding: fluid(10, 5) fluid(15, 7.5);
+              border-radius: fluid(20, 10);
+
+              border: rem(1) solid var(--color-light-grey);
+              background-color: var(--color-light-grey);
+              appearance: none;
+              -webkit-appearance: none;
+              -moz-appearance: none;
+              cursor: pointer;
+          
+              &:hover {
+                border-color: var(--color-grey);
+              }
+          
+              &:focus {
+                outline: none;
+                border-color: var(--color-blue);
+                box-shadow: 0 0 rem(5) rgba(0, 123, 255, 0.5);
+              }
+          
+              // Стили для disabled
+              &:disabled {
+                background-color: #f5f5f5;
+                cursor: not-allowed;
+              }
+            }
+        }
+    }
 }
 
 #addDoc {
@@ -46,4 +111,19 @@
 }
 #selectDoc {
     background-image: url('../assets/select-doc.png');
+}
+
+#back_and_cont {
+    margin: 0;
+    width:  fluid(512, 256);
+    * {
+        background-color: var(--color-orange);
+        color: var(--color-light);
+    }
+    .btn:first-child {
+        margin-left: 0;
+    }
+    .btn:last-child {
+        margin-right: 0;
+    }
 }
